data/derived/fa15/progs/unify/prog1226.ml.out
Characters 171-178:
  if (sum + r) > 9 then (int_of_float (sum+r),((sum+r) mod 10)::v) 
                                      ^^^^^^^
Error: This expression has type int but an expression was expected of type
         float
